# o2-django-gs-parser

./: .env.ex  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker_install.sh  install.sh  pyproject.toml  start.sh
.github/workflows/: workflow.yml
gs_parser/: manage.py
gs_parser/app/: models.py  serializers.py  viewsets.py
gs_parser/app/management/commands/: startparser.py  startschedule.py
gs_parser/app/migrations/: 0001_initial.py  0002_alter_dieselfueltypes_df_arctica_price_and_more.py
gs_parser/app/services/: gas_stations.py  pw.py  schedule.py
gs_parser/app/utils/: price.py
gs_parser/gs_parser/: asgi.py  envs.py  log.py  settings.py  urls.py  wsgi.py
