[tool.poetry]
name = "o2-django-gs-parser"
version = "0.1.0"
description = "technical task for o2rus"
authors = ["rafailka-m <rafail.medzhidov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"
playwright = "^1.31.1"
xlrd = "^2.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.1.1"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-ignore = ["F401", "W292"]
exclude = [
    ".git",
    ".github",
    "__pycache__"
]
