[tool.poetry]
name = "o2-django-gs-parser"
version = "0.1.0"
description = "technical task for o2rus"
authors = ["rafailka-m <rafail.medzhidov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"
beautifulsoup4 = "^4.12.0"
playwright = "^1.31.1"
pydantic = "^1.10.6"
dj-database-url = "^1.2.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.1.1"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-ignore = ["F401", "W292"]
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "migrations",
    "settings.py"
]

[tool.mypy]
exclude = [
    "settings.py"
]
